Otros cambios realizados. Links puestos en marcha

--- a/views/lpe/admin/ajustes.twig
+++ b/views/lpe/admin/ajustes.twig
@@ -65,7 +65,7 @@
 			 plugins: "bbcode",
             emoticonsEnabled: false,
             toolbarExclude: "font,color,table,horizontalrule,subscript,superscript",
-            height: '100',
+            height: '100%',
             width: '100%',
             style: "{{ baseUrl() }}/assets-lpe/css/lpe.css",
             resizeEnabled: false,
