--- a/views/lpe/contenido/derecho/comentario.twig
+++ b/views/lpe/contenido/derecho/comentario.twig
@@ -43,8 +43,8 @@
             {% if comentario.respuestas|length > 0 %}
             {% for respuesta in comentario.respuestas %}
             <div class="col-xs-1 text-center">
-                <a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}">
-                    <img src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}" class="img-circle" style="width: 25px; margin:0 auto 5px" alt="">
+                <a href="{{ urlFor('shwUsuario',{'idUsu': respuesta.autor.id}) }}">
+                    <img src="{{ avatarUrl(respuesta.autor.img_tipo, respuesta.autor.img_hash, 32) }}" class="img-circle" style="width: 25px; margin:0 auto 5px" alt="">
                 </a>
             </div>
             <div class="col-xs-11" style="padding-right:0">
