--- a/views/lpe/contenido/opinion/editar.twig
+++ b/views/lpe/contenido/opinion/editar.twig
@@ -24,7 +24,7 @@
             <textarea name="cuerpo"></textarea>
             <hr>
             <div class="clearfix">
-                <a href="#" class="pull-left btn btn-link">Cancelar</a>
+                <a href="{{ urlFor('shwIndex')}}" class="pull-left btn btn-link">Cancelar</a>
                 <button type=submit class="pull-right btn btn-primary">Editar opinion</button>
             </div>
         </div>
