--- a/views/lpe/usuario/ver.twig
+++ b/views/lpe/usuario/ver.twig
@@ -5,21 +5,18 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-sm-8 col-sm-offset-2 text-center">
-            <img src="{{ avatarUrl(usuario.img_tipo, usuario.img_hash, 160) }}" class="img-circle img-responsive" style="margin: 0 auto;"
+        <div class="col-sm-6">
+            <div class="text-center">
+                 <img src="{{ avatarUrl(usuario.img_tipo, usuario.img_hash, 160) }}" class="img-circle img-responsive" style="margin: 0 auto;"
                 data-toggle="tooltip" data-placement="bottom" data-original-title="Usuario1" alt="Avatar">
             <h2><strong>{{ usuario.nombre }} {{ usuario.apellido }}</strong></h2>
-            <ul class="list-unstyled">
-                <li><strong>Direccion:</strong> San Juan 2591</li>
-                <li><strong>Direccion:</strong> San Juan 2591</li>
-                <li><strong>Direccion:</strong> San Juan 2591</li>
-                <li><strong>Direccion:</strong> San Juan 2591</li>
+            <ul class="list-inline">
+                <li><strong>Fecha de nacimiento:</strong> {{ usuario.birthday|date("m/Y")}}</li>
+                <li><strong>Localidad:</strong> {{ usuario.address }}</li>
+                <li><strong>Ocupacion:</strong> {{ usuario.title }}</li>
             </ul>
             <hr>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
+            </div>
             <h4><strong>Ultima actividad</strong></h4>
             <ul class="list-group">
                 {% if acciones|length > 0 %} {% for accion in acciones %}
@@ -34,22 +31,23 @@
             </ul>
         </div>
         <div class="col-sm-6">
-            <h4><strong>Comentarios</strong></h4>
-            <blockquote>
+            <h4><strong>Comentarios <i class="zmdi zmdi-comment-outline zmdi-hc-fw"></i>({{usuario.comentarios_count}})</strong></h4>
+              {% if comentarios|length > 0 %} {% for comentario in comentarios %}
+                <blockquote>
+                <p class="lead">{{ comentario.cuerpo }}</p>
+                <p class="lead"><small>Comentario hecho el {{ comentario.created_at|date("d/m/Y")}}</small></p>
+                </blockquote>
+                <hr>
+                {% endfor%} {% else %}
+                <blockquote>
+                <p>No hay comentarios..</p>
+                </blockquote>
+                {% endif %}
+            {#<blockquote>
                 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
                 <p class="lead"><small>Comentario en <cite title="Source Title">"Derecho 1"</cite> el 3/10/2016</small></p>
-            </blockquote>
-            <hr>
-            <blockquote>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <p class="lead"><small>Comentario en <cite title="Source Title">"Derecho 1"</cite> el 3/10/2016</small></p>
-            </blockquote>
-            <hr>
-            <blockquote>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                <p class="lead"><small>Comentario en <cite title="Source Title">"Derecho 1"</cite> el 3/10/2016</small></p>
-            </blockquote>
-            <hr>
+            </blockquote>#}
+          
         </div>
     </div>
 </div>
