--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -50,8 +50,8 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><a href="{{ urlFor('shwIndex') }}"><i class="zmdi zmdi-home zmdi-hc-fw zmdi-hc-lg"></i>Inicio</a></li>
-                            <li><a href="#">Propuesta</a></li>
-                            <li><a href="#">Antecedentes</a></li>
+                            <li><a href="{{ urlFor('shwAnteced') }}">Antecedentes</a></li>
+                            <li><a href="{{ urlFor('shwProp') }}">Propuesta</a></li>
                             <li><a href="{{urlFor('shwListaEvento')}}">Cronograma</a></li>
                             <!--<li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -137,8 +137,14 @@
     </div>
     <div class="footer">
         <img class="img-logo" src="{{ baseUrl() }}/assets-lpe/img/logo-footer.jpg" alt="">
-        <div class="inside-footer text-right" style="padding-top: 60px;">
-            <span style="color: #e0e0e0; font-size: 9px;">Desarrollado con </span><a href="http://www.virtuagora.org"><img style="height: 17px;margin-right: 8px;" src="{{ baseUrl() }}/assets/img/bigwhitelogo.png" alt=""></a>
+        <div class="text-center" style="color: #e0e0e0; font-size: 11px;">
+            2016
+            <ul class="list-inline">
+                <li><a href="{{ urlFor('shwTos') }}" style="color: #e0e0e0">Terminos y condiciones.</a></li>
+            </ul>
+        </div>
+        <div class="inside-footer text-right" style="padding-top: 10px;">
+            <a href="href="http://www.virtuagora.org"" style="color: #e0e0e0"><span style="font-size: 9px;">Desarrollado con </span><img style="height: 17px;margin-right: 8px;" src="{{ baseUrl() }}/assets/img/bigwhitelogo.png" alt=""></a>
         </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
