sacado un puntito c:

--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -140,7 +140,7 @@
         <div class="text-center" style="color: #e0e0e0; font-size: 11px;">
             2016
             <ul class="list-inline">
-                <li><a href="{{ urlFor('shwTos') }}" style="color: #e0e0e0">Terminos y condiciones.</a></li>
+                <li><a href="{{ urlFor('shwTos') }}" style="color: #e0e0e0">Terminos y condiciones</a></li>
             </ul>
         </div>
         <div class="inside-footer text-right" style="padding-top: 10px;">
