Cambio en la descripción del Sharer

--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -11,7 +11,7 @@
 <meta property="og:url"                content="{{ baseUrl() }}/derecho/{{derecho.id}}" />
 <meta property="og:type"               content="article" />
 <meta property="og:title"              content="{{ derecho.titulo}} - Nueva Ley Provincial de Educación" />
-<meta property="og:description"        content="{{ derecho.descripcion|bbCode|slice(0,180)|replace({'<br>': " ", '<b>': "",'</b>': "",'<i>': "",'</i>': "",'<u>': "",'</u>': ""}) }} ... [Leer Mas]" />
+<meta property="og:description"        content="Enterate más acerca de este derecho en el nuevo portal de participación para la Nueva Ley Provincial de Educación de la Provincia de Santa Fe" />
 <meta property="og:image"              content="{{linkImagen}}" />
 {% if derecho.imagen == 1 %}
 <meta property="og:image"              content="{{linkImagen}}" />
