cambios menores esteticos

--- a/views/lpe/registro/registro.twig
+++ b/views/lpe/registro/registro.twig
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="inputLocalidad" class="col-md-2 control-label">Localidad</label>
+                            <label for="inputLocalidad" class="col-md-2 control-label">Departamento</label>
                             <div class="col-md-10">
                                 <select class="form-control" id="inputLocalidad" name="address" data-error="Elija su localidad" required>
                                         {% for localidad in localidades %}
