--- a/views/lpe/master.twig
+++ b/views/lpe/master.twig
@@ -50,8 +50,8 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><a href="{{ urlFor('shwIndex') }}"><i class="zmdi zmdi-home zmdi-hc-fw zmdi-hc-lg"></i>Inicio</a></li>
-                            <li><a href="{{ urlFor('shwAnteced') }}">Antecedentes</a></li>
                             <li><a href="{{ urlFor('shwProp') }}">Propuesta</a></li>
+                            <li><a href="{{ urlFor('shwAnteced') }}">Antecedentes</a></li>
                             <li><a href="{{urlFor('shwListaEvento')}}">Cronograma</a></li>
                             <!--<li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -145,7 +145,7 @@
             </ul>
         </div>
         <div class="inside-footer text-right" style="padding-top: 10px;">
-            <a href="href="http://www.virtuagora.org"" style="color: #e0e0e0"><span style="font-size: 9px;">Desarrollado con </span><img style="height: 17px;margin-right: 8px;" src="{{ baseUrl() }}/assets/img/bigwhitelogo.png" alt=""></a>
+            <a href="http://www.virtuagora.org" style="color: #e0e0e0"><span style="font-size: 9px;">Desarrollado con </span><img style="height: 17px;margin-right: 8px;" src="{{ baseUrl() }}/assets/img/bigwhitelogo.png" alt=""></a>
         </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
