--- a/views/lpe/contenido/evento/crear.twig
+++ b/views/lpe/contenido/evento/crear.twig
@@ -21,7 +21,7 @@
                 <div class="form-group text-center" style="margin-bottom:20px;">
                     <i class="zmdi zmdi-calendar zmdi-hc-4x"></i>
                     <h5><b>Nombre del Evento</b></h5>
-                    <input type="text" name="titulo" class="form-control input-lg" style="text-align: center" placeholder="Escriba el nombre del evento">
+                    <input type="text" name="titulo" class="form-control input-lg" style="text-align: center;" placeholder="Escriba el nombre del evento">
                 </div>
                 <div class="row">
 
