--- a/views/lpe/contenido/evento/listar.twig
+++ b/views/lpe/contenido/evento/listar.twig
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
             <div class="text-center">
-                <h2 class="text-center"><strong>Cronograma</strong>
+                <h2 class="text-center"><strong>CRONOGRAMA</strong>
                 {% if user and (user.patrulla_id != null) %}
         <a href="{{urlFor('shwCrearEvento')}}" class="btn-warning btn"><i class="zmdi zmdi-plus zmdi-hc-lg"></i></a>
         {% endif %}
@@ -25,14 +25,14 @@
                             </span></h3>
                             {% if user and (user.patrulla_id != null) %}
                             <form action="{{ urlFor('runElimiEvento', {'idEve': evento.id }) }}" method="POST">
-                                <button type="submit" class="btn btn-warning btn-sm"><i class="zmdi zmdi-close zmdi-hc-fw zmdi-hc-lg"></i> Eliminar</a>
+                                <button type="submit" class="btn btn-warning btn-sm" style="margin-bottom: 15px;"><i class="zmdi zmdi-close zmdi-hc-fw zmdi-hc-lg"></i> Eliminar</a>
                             </form>
                         {% endif %}
                     </div>
                     <h4 class="list-group-item-heading"><strong>{{ evento.titulo }}</strong></h4>
                     <h5 class="list-group-item-heading">{{evento.fecha|date("d/m/Y")}} - {{evento.fecha|date("H:i")}}Hs.</h5>
                     <h6 class="list-group-item-heading">{{ evento.lugar }}</h6>
-                    <p class="list-group-item-text lead">{{ evento.cuerpo }}</p>
+                    <p class="list-group-item-text">{{ evento.cuerpo }}</p>
                     {% if evento.finalizado %}
                     <h5><span class="{{ (not evento.finalizado) and tackle ? '' : 'text-primary'}}" style="{{ (not evento.finalizado) and tackle ? 'color:#FFF' : ''}}"><b>Opiniones de interes</b></span></h5>
                     <ul class="list-inline">
