--- a/views/lpe/contenido/static/tos.twig
+++ b/views/lpe/contenido/static/tos.twig
@@ -3,9 +3,9 @@
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
             <h1><strong>
-             Terminos y condiciones de la plataforma
+             TERMINOS Y CONDICIONES DE LA PLATAFORMA
                 </strong></h1>
-            <div>
+            <div style="font-size: 14px;line-height: 21px;">
                 {{ tos.value|bbCode }}
             </div>
         </div>
